Worked on the crud controller and metadata stuff

--- a/Goals/Goals/Views/Shared/_Layout.cshtml
+++ b/Goals/Goals/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <div class="navbar-inner">
                     @Html.ActionLink("Goals", "Index", "Home", null, new { @class = "brand" })
                     <ul class="nav">
-                        @Html.AddNavButton("Home", "Index", "Home")
+                        @Html.AddNavButton("Listing", "Listing", "Goals")
                         @Html.AddNavButton("New", "Create", "Goals")                        
                     </ul>
                 </div>
